--- a/templates/password_reset_complete.html
+++ b/templates/password_reset_complete.html
@@ -220,7 +220,7 @@ img.emoji {
 </div>
 <div class="sh-heading" id="heading-a1ce2e23925e1da97aabc385091d4bce">
 	<h1 class="sh-heading-content size-xxl text-center">
-		Recuperar cuenta Wao	</h1>
+		¡Ya puedes iniciar Sesión!	</h1>
 </div>
 
 {% if messages %}
@@ -243,19 +243,13 @@ img.emoji {
 	
 	<div class="sh-column-wrapper" style="position: relative; top: -40px;">
 <div  id="text-block-6e824969aefe6553ab3d4cad0bd64a61" class="sh-text-block">
-	<p style="text-align: center;"><span style="color: #ffffff;"><strong>Recuperar contraseña </strong></span></p></div>
+	<p style="text-align: center;"><span style="color: #ffffff;"><strong>¡Cuenta recuperada! </strong></span></p></div>
 <div id="cf7-c15514f11947e5e5a2b480a09848a46a" class="sh-cf7 sh-cf7-style3">
     <div role="form" class="wpcf7" id="wpcf7-f114-p5-o1" lang="en-US" dir="ltr">
 <div class="screen-reader-response"></div>
 
+<a href="/auth/">Iniciar Sesión</a>
 
-<form method="post" class="wpcf7-form" autocomplete="off">
-	{% csrf_token %}
-	<label for="id_email" style="font-size: 16px; color: #ccc">Correo:</label> {{ form.email }} 
-	<br>
-<p><input type="submit" value="Recuperar contraseña" class="wpcf7-form-control wpcf7-submit"></p>
-	
-</form>
 </div></div>
 
 <br><br><br>
