--- a/templates/password_reset_done.html
+++ b/templates/password_reset_done.html
@@ -90,15 +90,9 @@ img.emoji {
 							<ul class="sh-nav">
 
 															    
-        <li class="menu-item sh-nav-dropdown">
-            <a>
-                <div class="sh-table-full">
-                    <div class="sh-table-cell">
-                        <span class="c-hamburger c-hamburger--htx">
-                            <span>Toggle menu</span>
-                        </span>
-                    </div>
-                </div>
+       <li class="menu-item sh-nav-dropdown">
+            <a href="/inicio/" style="font-size: 14px;">
+                INICIO
             </a>
         </li>
 							</ul>
