--- a/templates/footer/404.html
+++ b/templates/footer/404.html
@@ -8,7 +8,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="icon" type="image/png" href="https://d11nqwgsnjp6i8.cloudfront.net/static/img/favicon.png" />
 
-<link href="https://d11nqwgsnjp6i8.cloudfront.net/static/css/error.css" rel="stylesheet"  />
+<link href="https://s3-us-west-1.amazonaws.com/waomovies/static/css/error.css" rel="stylesheet"  />
 <!-- web font -->
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'><!--web font-->
 <!-- //web font -->
