--- a/templates/footer/404.html
+++ b/templates/footer/404.html
@@ -22,7 +22,7 @@
 				<img src="http://haintheme.com/demo/html/bustter/images/uploads/err-img.png" style="width: 60%;">
 				
 				<h1>Lo siento, ha habido un error en tu solicitud.</h1>
-				<p class="w3lstext">Tal vez haz accedido a una url que no existe. Por favor, asegurate de que tu url exista. Sino ve a <a href="inicio"> Inicio.</a> </p>
+				<p class="w3lstext">Tal vez haz accedido a una url no existente. Por favor, asegurate de que tu url exista. Sino ve a <a href="inicio"> Inicio.</a> </p>
 				<div class="agile-search"> 
 					<form method="post" action="/search/">
 						{% csrf_token %}
@@ -43,7 +43,7 @@
 	<!-- //main -->
 	<!-- copyright -->
 	<div class="copyright w3-agile">
-		<p>© 2019 WaoMovies. Todos los derechos reselvados</p>
+		<p>© 2019 WaoMovies. Todos los derechos reservados.</p>
 	</div>
 	<!-- //copyright --> 
 </body>
