--- a/templates/userprofile.html
+++ b/templates/userprofile.html
@@ -226,7 +226,7 @@
 			<div class="col-md-9 col-sm-12 col-xs-12">
 				<div class="form-style-1 user-pro" >
 					<form method="post" action="/user_edit/{{ usuario.id }}/" class="user">{% csrf_token %}
-						<h4>Cambiar detalles de la cuenta<small> &nbsp; &nbsp; *llena los datos de quieras editar*</small></h4> 
+						<h4>Cambiar detalles de la cuenta<small> &nbsp; &nbsp; *llena los datos que quieras editar*</small></h4> 
 						<div class="row">
 							<div class="col-md-6 form-it">
 								<label>Nombre</label>
