--- a/templates/favoritos_login.html
+++ b/templates/favoritos_login.html
@@ -38,6 +38,176 @@ img.emoji {
 	padding: 0 !important;
 }
 </style>
+
+<style type="text/css">
+	@media (max-width: 1025px) and (min-width: 880px){
+		.acomodar {
+			width: 850px !important;
+			left: -200px;
+			position: relative;
+		}
+		#text-block-6e824969aefe6553ab3d4cad0bd64a61 {
+			position: relative;
+			left:-45px;
+		}
+	}
+
+	@media (max-width: 881px) and (min-width: 715px){
+		.acomodar {
+			width: 680px !important;
+			left: -117px;
+			position: relative;
+		}
+		#text-block-6e824969aefe6553ab3d4cad0bd64a61 {
+			position: relative;
+			left:-45px;
+		}
+	}
+
+	@media (max-width: 716px) and (min-width: 570px){
+		.acomodar {
+			width: 520px !important;
+			left: -20px;
+			position: relative;
+		}
+		#text-block-6e824969aefe6553ab3d4cad0bd64a61 {
+			position: relative;
+			left:-45px;
+		}
+	}
+
+
+
+	@media (max-width: 571px) and (min-width: 550px){
+		.acomodar {
+			width: 500px !important;
+			left: -20px;
+			position: relative;
+		}
+		#text-block-6e824969aefe6553ab3d4cad0bd64a61 {
+			position: relative;
+			left:-45px;
+		}
+		
+	}
+
+
+	@media (max-width: 551px) and (min-width: 500px){
+		.acomodar {
+			width: 500px !important;
+			left: -20px;
+			position: relative;
+		}
+		.container {
+			width: 300px !important;
+			position: relative;
+			left: -60px;
+		}
+		#text-block-6e824969aefe6553ab3d4cad0bd64a61 {
+			position: relative;
+			left:-45px;
+		}
+	}
+
+
+	@media (max-width: 501px) and (min-width: 360px){
+		.acomodar {
+			width: 340px !important;
+			left: 44px;
+			position: relative;
+		}
+		.container {
+			width: 300px !important;
+			position: relative;
+			left: -60px;
+		}
+
+		#text-block-6e824969aefe6553ab3d4cad0bd64a61 {
+			position: relative;
+			left:-45px;
+		}
+
+		.wpcf7-form {
+			margin-left: -60px;
+		}
+	}
+
+	@media (max-width: 361px) and (min-width: 100px){
+		.acomodar {
+			width: 300px !important;
+			left: 70px;
+			position: relative;
+		}
+
+		.as{
+			width: 140px !important;
+			margin-bottom:18px !important;
+		}
+
+		.redbtn {width: 140px!important; height: 200px !important; }
+		.hvr-inner {width: 140px!important; height: 200px !important;}
+		.container {
+			width: 300px !important;
+			position: relative;
+			left: -60px;
+		}
+
+		#text-block-6e824969aefe6553ab3d4cad0bd64a61 {
+			position: relative;
+			left:45px;
+			width: 300px !important;
+		}
+.wpcf7-form {
+			margin-left: -100px;
+		}
+
+	}
+
+
+
+	@media (max-height: 565px) and (min-height: 522px){
+		.container {
+			margin-top: 40px !important;
+		}
+
+		
+	}
+
+
+@media (max-height: 523px) and (min-height: 480px){
+		.container {
+			margin-top: 80px !important;
+		}
+
+		
+	}
+
+
+@media (max-height: 481px) and (min-height: 420px){
+		.container {
+			margin-top: 140px !important;
+		}
+
+		
+	}
+
+@media (max-height: 421px) and (min-height: 370px){
+		.container {
+			margin-top: 190px !important;
+		}
+
+		
+	}
+
+@media (max-height: 371px) and (min-height: 100px){
+		.container {
+			margin-top: 240px !important;
+		}
+
+		
+	}		
+
+</style>
 <link rel='stylesheet' id='bootstrap-css' href='{% static "" %}wp-content/themes/jevelin/css/bootstrap.min.css?ver=3.3.4' type='text/css' media='all'>
 <link rel='stylesheet' id='animate-css' href='{% static "" %}wp-content/themes/jevelin/css/animate.min.css?ver=3.4.0' type='text/css' media='all'>
 <link rel='stylesheet' id='slick-css' href='{% static "" %}wp-content/themes/jevelin/css/slick.css?ver=1.5.9' type='text/css' media='all'>
@@ -82,55 +252,7 @@ img.emoji {
 	<div id="page-container" class="">
 		
 
-					<header class="primary-mobile primary-mobile-light">
-				
-<div id="header-mobile" class="sh-header-mobile">
-	<div class="sh-header-mobile-navigation">
-		<div class="container">
-			<div class="sh-table">
-				<div class="sh-table-cell sh-group">
-
-
-    
-				</div>
-				<div class="sh-table-cell">
-
-										<nav id="header-navigation-mobile" class="header-standard-position">
-						<div class="sh-nav-container">
-							<ul class="sh-nav">
-
-															    
-        <li class="menu-item sh-nav-dropdown">
-            <a>
-                <div class="sh-table-full">
-                    <div class="sh-table-cell">
-                        <span class="c-hamburger c-hamburger--htx">
-                            <span>Toggle menu</span>
-                        </span>
-                    </div>
-                </div>
-            </a>
-        </li>
-							</ul>
-						</div>
-					</nav>
-
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<nav class="sh-header-mobile-dropdown">
-		<div class="container sh-nav-container">
-			<ul class="sh-nav-mobile"></ul>
-		</div>
-
-		<div class="container sh-nav-container">
-					</div>
-
-			</nav>
-</div>
-			</header>
+					
 			<header class="primary-desktop primary-desktop-light">
 				
 <div class="sh-header-height">
@@ -212,11 +334,11 @@ img.emoji {
 </section>
 
 </div>
-<div class="sh-section-container container " style=" z-index:500000px;position: relative; top: -550px; overflow: hidden;">
+<div class="sh-section-container container " style=" z-index:500000px;position: relative; top: -550px ">
 	<!--div style="margin-bottom: none; z-index: -1; background-color: rgba(0,0,0,0.7);filter: blur(10px); width:900px; height: 500px; margin-right: auto; margin-left: auto;"></div-->
-		<div class="fw-row no-gutters" style="" >
+		<div class="fw-row no-gutters"  >
 	
-<div class="sh-column sh-column-e8dd896dd11e33f20a5f74d8d5704bf1 fw-col-xs-12">
+<div class="sh-column sh-column-e8dd896dd11e33f20a5f74d8d5704bf1 fw-col-xs-12" >
 
 	
 <style type="text/css">
@@ -512,7 +634,7 @@ background: linear-gradient(to right, #93291E, #ED213A); /* W3C, IE 10+/ Edge, F
 
 </style>
 
-<div class="sh-column-wrapper">
+<div class="sh-column-wrapper" >
 		
 <!--div id="text-block-98b838cb14828f1bb30771b38ffc6b10" class="sh-text-block">
 	<p style="text-align: center;"><span style="color: #ffffff;"><img src="{%static ''%}img/wamovieslogo.png"></span></p></div-->
@@ -528,7 +650,10 @@ background: linear-gradient(to right, #93291E, #ED213A); /* W3C, IE 10+/ Edge, F
 	<h1 class="sh-heading-content size-default text-center">
 			</h1>
 </div>
-<div class="row col-lg-12 no-gutters container-fluid scrollbar scrollbar-danger" style="border: solid 3px rgba(0,0,0,0.7); border-radius: 7px; width: 980px; position: relative; right: 250px; overflow-y: scroll; height: 500px;">
+
+
+
+<div id="acomodar" class="row col-lg-12 no-gutters container-fluid scrollbar scrollbar-danger acomodar" style="border: solid 3px rgba(0,0,0,0.7); border-radius: 7px; width: 980px; position: relative; right: 250px; overflow-y: scroll; height: 500px;">
 	{% if not request.user.profile.fav_peliculas %}
 {% for peli in peliculas_fav%}
 <div id="{{peli.id}}" class=" as no-gutters" style=" margin-bottom:45px;padding:0px 19px; padding-left:  0px; padding-right: 0px; width: 160px; height: 200px; position: relative; float: left;">
@@ -687,6 +812,7 @@ background: linear-gradient(to right, #93291E, #ED213A); /* W3C, IE 10+/ Edge, F
 </div>
 </div>
 </div>
+
 
 
 <!--div class="sh-empty-space" id="empty-space-00111dccdf3b1bbe8d713e818fcc5a96"></div>
