--- a/templates/index.html
+++ b/templates/index.html
@@ -668,6 +668,8 @@ $('#tabcontentin').append('<div id="zzz'+value.id+'"  class="slide-it" style="wi
 			       	 	</div-->
 				    </div>
 				</div>
+
+				{% if onseries %}
 				<div class="title-hd">
 					<h2>Series</h2>
 					<a href="/series_list/orden_de_subida/" class="viewall">Ver todo<i class="fa fa-long-arrow-right point"></i></a>
@@ -1075,6 +1077,8 @@ $('#tabcontentin').append('<div id="zzz'+value.id+'"  class="slide-it" style="wi
 			       	 	</div>
 				    </div>
 				</div>
+			{% endif %}
+				
 			</div>
 			<div class="col-md-4">
 				<div class="sidebar">
