iframe ajax, busqueda tags

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
 
 <link rel="stylesheet" type="text/css" href="{% static '' %}styles/style.css">
 <link rel="stylesheet" type="text/css" href="{% static '' %}styles/menu.css">
-
+<link href="https://fonts.googleapis.com/css?family=Fira+Sans|Merriweather:400,700" rel="stylesheet">
 <script type="text/javascript" src="{% static '' %}scripts/plugins.js"></script>
 <script type="text/javascript" src="{% static '' %}scripts/custom.js"></script>
 
