iframe ajax, busqueda tags

--- a/templates/moviesingle.html
+++ b/templates/moviesingle.html
@@ -2700,7 +2700,7 @@ $('#panelservidor1').removeClass("active");
   $('#panelservidor4').removeClass("show");
   $('#panelservidor4').removeClass("in");
 $('#servidor2').removeClass("active")
-  $('#servidor1').removeClass("active")
+  $('#servidor1').addClass("active")
   $('#servidor3').removeClass("active")
   $('#servidor4').removeClass("active")
 document.getElementById('panelservidor1').style.display="none"
