--- a/templates/moviesingle.html
+++ b/templates/moviesingle.html
@@ -2272,7 +2272,7 @@ input[type="button"].btn-block {
 {% endif %}
 {% if peliculaa.servidor1 %}
 <button type="button" class="btn btn-tw"  onclick="click7()" style="font-size: 16px;" data-toggle="tab" id="ser
-vidor1" href="#panelservidor1" role="tab">servidor1</button>
+vidor1" href="#servidor1" role="tab">servidor1</button>
 {% endif %}
 {% if peliculaa.servidor2 %}
 <button type="button" class="btn btn-tw"  onclick="click8()" style="font-size: 16px;" data-toggle="tab" id="servidor2" href="#panelservidor2" role="tab">servidor2</button>
@@ -2700,7 +2700,7 @@ $('#panelservidor1').removeClass("active");
   $('#panelservidor4').removeClass("show");
   $('#panelservidor4').removeClass("in");
 $('#servidor2').removeClass("active")
-  $('#servidor1').addClass("active")
+  $('#servidor1').removeClass("active")
   $('#servidor3').removeClass("active")
   $('#servidor4').removeClass("active")
 document.getElementById('panelservidor1').style.display="none"
