iframe ajax, busqueda tags

--- a/templates/moviesingle.html
+++ b/templates/moviesingle.html
@@ -2271,8 +2271,7 @@ input[type="button"].btn-block {
 <button type="button" class="btn btn-tw" onclick="click6()" style="font-size: 16px;" onclick="click6()"  data-toggle="tab" id="streamcloud" href="#panelstreamcloud" role="tab">StreamCloud</button>
 {% endif %}
 {% if peliculaa.servidor1 %}
-<button type="button" class="btn btn-tw"  onclick="click7()" style="font-size: 16px;" data-toggle="tab" id="ser
-vidor1" href="#servidor1" role="tab">servidor1</button>
+<button type="button" class="btn btn-tw"  onclick="click7()" style="font-size: 16px;" data-toggle="tab" id="servidor1" href="#panelservidor1" role="tab">servidor1</button>
 {% endif %}
 {% if peliculaa.servidor2 %}
 <button type="button" class="btn btn-tw"  onclick="click8()" style="font-size: 16px;" data-toggle="tab" id="servidor2" href="#panelservidor2" role="tab">servidor2</button>
