iframe ajax, busqueda tags

--- a/templates/moviesingle.html
+++ b/templates/moviesingle.html
@@ -2414,7 +2414,7 @@ filter: brightness(50%) blur(2px);" class="imgplay">
 filter: brightness(50%) blur(2px);" class="imgplay">
 {% endif %}
         <input type="hidden" name="server" value="openload">
-        <i id="loadingg" class="fa fa-play iconoplay"></i></button>
+        <i id="loadinggopenload" class="fa fa-play iconoplay"></i></button>
     </form>
                   </div>
 
@@ -2635,7 +2635,7 @@ filter: brightness(50%) blur(2px);" class="imgplay">
                  console.log(textStatus)
                  console.log(jqXHR)
                  $myForm[0].reset(); 
-       $("#panel" +bas2).append('<iframe id="ifarme" class="responsive-i" src="'+data.embed+'" scrolling="no" frameborder="0" width="700" height="430" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" style="display:none;""></iframe>');
+       $("#panel" +bas2).append('<iframe id="ifarme" class="responsive-i" src="'+data.embed+'" scrolling="no" frameborder="0" width="700" height="430" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" style="display:none;"></iframe>');
        setTimeout(function(){
 $("#" + bas2 + "form").remove()
        document.getElementById("ifarme").style.display="initial"
