iframe ajax, busqueda tags

--- a/templates/moviesingle.html
+++ b/templates/moviesingle.html
@@ -2290,6 +2290,7 @@ input[type="button"].btn-block {
 <div class="tab-content" style="">
 
     <!--Panel 1-->
+    {% if peliculaa.rapidvideo %}
     <div class="tab-pane fade in show active " id="panelrapidvideo" role="tabpanel" style="">
 <div class="row">
 
@@ -2321,6 +2322,7 @@ filter: brightness(50%) blur(2px);" class="imgplay">
                   </div>
        
     </div>
+    {% endif %}
     <!--/.Panel 1-->
 
     <!--Panel 2-->
