--- a/templates/moviesingle.html
+++ b/templates/moviesingle.html
@@ -2203,7 +2203,7 @@ input[type="button"].btn-block {
 }
 
 .iconoplay {
-    font-size: 130px; color: white; text-align: center; position: absolute; margin-top: -33.7%; margin-left:-37px;
+    font-size: 130px; color: white; text-align: center; position: absolute; margin-top: -33.7%; margin-left:-50px;
 
 }
 
@@ -2239,8 +2239,9 @@ input[type="button"].btn-block {
 
 .tab-pane {
     min-height: 350px;
-    height: 420px;
 }
+
+.duraciondata {color: white; position: relative; -z-index: 3; top: -30px;}
 </style>
               <div id="reproducir" class="tab review">
 
@@ -2319,15 +2320,16 @@ filter: brightness(50%) blur(2px);" class="imgplay">
 <img src="https://ripshop.es/wp-content/uploads/2014/03/Only-black.png" style="width: 100%; position: relative; -webkit-filter: brightness(50%) blur(2px);
 
 filter: brightness(50%) blur(2px);" class="imgplay">
+    {% endif %}
 
         <input type="hidden" name="server" value="rapidvideo">
+        <span class="duraciondata">Duración: {{ peliculaa.run_time }}min</span>
         <i id="loadinggrapidvideo" class="fa fa-play iconoplay"></i></button>
     </form>
                    
                   </div>
        
     </div>
-    {% endif %}
     <!--/.Panel 1-->
 
     <!--Panel 2-->
@@ -2343,7 +2345,7 @@ filter: brightness(50%) blur(2px);" class="imgplay">
 
                 <ul  style=" list-style: none; position: relative; top: 23%; left: 14px;">
                 <li style="float: left;">Estás viendo {{ peliculaa.titulo }} en WaoMovies. ¡Gracias por preferirnos!</li>
-<li style="float: left; position: relative; left: 20%;">Duración: {{ peliculaa.run_time }}min</li>
+
                 </ul>
             </div>
         {% if peliculaa.portada %}
@@ -2356,6 +2358,7 @@ filter: brightness(50%) blur(2px);" class="imgplay">
 filter: brightness(50%) blur(2px);" class="imgplay">
 {% endif %}
         <input type="hidden" name="server" value="vidlox">
+<span class="duraciondata">Duración: {{ peliculaa.run_time }}min</span>
         <i id="loadinggvidlox" class="fa fa-play iconoplay"></i></button>
     </form>
                   </div>
@@ -2376,7 +2379,7 @@ filter: brightness(50%) blur(2px);" class="imgplay">
 
                 <ul  style=" list-style: none; position: relative; top: 23%; left: 14px;">
                 <li style="float: left;">Estás viendo {{ peliculaa.titulo }} en WaoMovies. ¡Gracias por preferirnos!</li>
-<li style="float: left; position: relative; left: 20%;">Duración: {{ peliculaa.run_time }}min</li>
+
                 </ul>
             </div>
         {% if peliculaa.portada %}
@@ -2389,6 +2392,7 @@ filter: brightness(50%) blur(2px);" class="imgplay">
 filter: brightness(50%) blur(2px);" class="imgplay">
 {% endif %}
         <input type="hidden" name="server" value="vidoza">
+<span class="duraciondata">Duración: {{ peliculaa.run_time }}min</span>
         <i id="loadingg" class="fa fa-play iconoplay"></i></button>
     </form>
                   </div>
@@ -2408,7 +2412,7 @@ filter: brightness(50%) blur(2px);" class="imgplay">
 
                 <ul  style=" list-style: none; position: relative; top: 23%; left: 14px;">
                 <li style="float: left;">Estás viendo {{ peliculaa.titulo }} en WaoMovies. ¡Gracias por preferirnos!</li>
-<li style="float: left; position: relative; left: 20%;">Duración: {{ peliculaa.run_time }}min</li>
+
                 </ul>
             </div>
         {% if peliculaa.portada %}
@@ -2421,6 +2425,7 @@ filter: brightness(50%) blur(2px);" class="imgplay">
 filter: brightness(50%) blur(2px);" class="imgplay">
 {% endif %}
         <input type="hidden" name="server" value="openload">
+<span class="duraciondata">Duración: {{ peliculaa.run_time }}min</span>
         <i id="loadinggopenload" class="fa fa-play iconoplay"></i></button>
     </form>
                   </div>
@@ -2439,7 +2444,7 @@ filter: brightness(50%) blur(2px);" class="imgplay">
 
                 <ul  style=" list-style: none; position: relative; top: 23%; left: 14px;">
                 <li style="float: left;">Estás viendo {{ peliculaa.titulo }} en WaoMovies. ¡Gracias por preferirnos!</li>
-<li style="float: left; position: relative; left: 20%;">Duración: {{ peliculaa.run_time }}min</li>
+
                 </ul>
             </div>
         {% if peliculaa.portada %}
@@ -2452,6 +2457,7 @@ filter: brightness(50%) blur(2px);" class="imgplay">
 filter: brightness(50%) blur(2px);" class="imgplay">
 {% endif %}
         <input type="hidden" name="server" value="streamago">
+<span class="duraciondata">Duración: {{ peliculaa.run_time }}min</span>
         <i id="loadinggstreamago" class="fa fa-play iconoplay"></i></button>
     </form>
                   </div>
@@ -2470,12 +2476,13 @@ filter: brightness(50%) blur(2px);" class="imgplay">
 
                 <ul  style=" list-style: none; position: relative; top: 23%; left: 14px;">
                 <li style="float: left;">Estás viendo {{ peliculaa.titulo }} en WaoMovies. ¡Gracias por preferirnos!</li>
-<li style="float: left; position: relative; left: 20%;">Duración: {{ peliculaa.run_time }}min</li>
+
                 </ul>
             </div>
         <img src="{{ peliculaa.portada.url }}" style="width: 100%; position: relative; -webkit-filter: brightness(50%) blur(2px) blur(1px);
 filter: brightness(50%) blur(2px) blur(1px);" class="imgplay">
         <input type="hidden" name="server" value="streamcloud">
+        <span class="duraciondata">Duración: {{ peliculaa.run_time }}min</span>
         <i id="loadinggstreamcloud" class="fa fa-play iconoplay"></i></button>
     </form>
                   </div>
@@ -2493,7 +2500,7 @@ filter: brightness(50%) blur(2px) blur(1px);" class="imgplay">
 
                 <ul  style=" list-style: none; position: relative; top: 23%; left: 14px;">
                 <li style="float: left;">Estás viendo {{ peliculaa.titulo }} en WaoMovies. ¡Gracias por preferirnos!</li>
-<li style="float: left; position: relative; left: 20%;">Duración: {{ peliculaa.run_time }}min</li>
+
                 </ul>
             </div>
         {% if peliculaa.portada %}
@@ -2506,6 +2513,7 @@ filter: brightness(50%) blur(2px);" class="imgplay">
 filter: brightness(50%) blur(2px);" class="imgplay">
 {% endif %}
         <input type="hidden" name="server" value="servidor1">
+<span class="duraciondata">Duración: {{ peliculaa.run_time }}min</span>
         <i id="loadinggservidor1" class="fa fa-play iconoplay"></i></button>
     </form>
                   </div>
@@ -2523,7 +2531,7 @@ filter: brightness(50%) blur(2px);" class="imgplay">
 
                 <ul  style=" list-style: none; position: relative; top: 23%; left: 14px;">
                 <li style="float: left;">Estás viendo {{ peliculaa.titulo }} en WaoMovies. ¡Gracias por preferirnos!</li>
-<li style="float: left; position: relative; left: 20%;">Duración: {{ peliculaa.run_time }}min</li>
+
                 </ul>
             </div>
         {% if peliculaa.portada %}
@@ -2536,6 +2544,7 @@ filter: brightness(50%) blur(2px);" class="imgplay">
 filter: brightness(50%) blur(2px);" class="imgplay">
 {% endif %}
         <input type="hidden" name="server" value="servidor2">
+<span class="duraciondata">Duración: {{ peliculaa.run_time }}min</span>
         <i id="loadinggservidor2" class="fa fa-play iconoplay"></i></button>
     </form>
                   </div>
@@ -2554,7 +2563,7 @@ filter: brightness(50%) blur(2px);" class="imgplay">
 
                 <ul  style=" list-style: none; position: relative; top: 23%; left: 14px;">
                 <li style="float: left;">Estás viendo {{ peliculaa.titulo }} en WaoMovies. ¡Gracias por preferirnos!</li>
-<li style="float: left; position: relative; left: 20%;">Duración: {{ peliculaa.run_time }}min</li>
+
                 </ul>
             </div>
         {% if peliculaa.portada %}
@@ -2567,6 +2576,7 @@ filter: brightness(50%) blur(2px);" class="imgplay">
 filter: brightness(50%) blur(2px);" class="imgplay">
 {% endif %}
         <input type="hidden" name="server" value="sevidor3">
+<span class="duraciondata">Duración: {{ peliculaa.run_time }}min</span>
         <i id="loadinggservidor3" class="fa fa-play iconoplay"></i></button>
     </form>
                   </div>
@@ -2585,7 +2595,7 @@ filter: brightness(50%) blur(2px);" class="imgplay">
 
                 <ul  style=" list-style: none; position: relative; top: 23%; left: 14px;">
                 <li style="float: left;">Estás viendo {{ peliculaa.titulo }} en WaoMovies. ¡Gracias por preferirnos!</li>
-<li style="float: left; position: relative; left: 20%;">Duración: {{ peliculaa.run_time }}min</li>
+
                 </ul>
             </div>
         {% if peliculaa.portada %}
@@ -2598,6 +2608,7 @@ filter: brightness(50%) blur(2px);" class="imgplay">
 filter: brightness(50%) blur(2px);" class="imgplay">
 {% endif %}
         <input type="hidden" name="server" value="servidor4">
+<span class="duraciondata">Duración: {{ peliculaa.run_time }}min</span>
         <i id="loadinggservidor4" class="fa fa-play iconoplay"></i></button>
     </form>
                   </div>
