iframe ajax, busqueda tags

--- a/templates/moviesingle.html
+++ b/templates/moviesingle.html
@@ -2575,7 +2575,7 @@ filter: brightness(50%) blur(2px);" class="imgplay">
 
 filter: brightness(50%) blur(2px);" class="imgplay">
 {% endif %}
-        <input type="hidden" name="server" value="sevidor3">
+        <input type="hidden" name="server" value="servidor3">
 <span class="duraciondata">Duración: {{ peliculaa.run_time }}min</span>
         <i id="loadinggservidor3" class="fa fa-play iconoplay"></i></button>
     </form>
