--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 
 <html >
 <head>
-  <link rel="icon" type="image/png" href="{% static 'img/favicon.png' %}" />
+  <link rel="icon" type="image/png" href="https://s3-us-west-1.amazonaws.com/waomovies/static/img/wamovieslogo2.png" />
   <title>{% block title %}WaoMovies{% endblock %}</title>
 </head>
 {% block head %}
