--- a/templates/base.html
+++ b/templates/base.html
@@ -97,7 +97,7 @@ movile = jQuery.browser.mobile
   }
   }
 
-  @media (min-width: 450px) and (max-width: 600px) {
+  @media (min-width: 450px) and (max-width: 559px) {
   #searches {
     border-radius: 20px;
     width: 130%;
@@ -108,14 +108,14 @@ movile = jQuery.browser.mobile
     width: 130%;
     border-radius: 15px;
     position: relative;
-    right: -100px;
+    right: -30px;
     overflow-y: scroll;
     max-height: 350px;
   }
   }
 
 
-   @media (min-width: 600px) and (max-width: 767px) {
+   @media (min-width: 560px) and (max-width: 767px) {
   #searches {
     border-radius: 20px;
     width: 200%;
@@ -449,6 +449,8 @@ background: linear-gradient(to right, #93291E, #ED213A); /* W3C, IE 10+/ Edge, F
   <form method="post" id="searchdiv" action="/search/" style=" position: absolute; top: 100px; z-index: 1000; left: 25%;">{% csrf_token %}
   <input class="form-control" type="search" name="src" placeholder="Buscar en WaoMovies..." id="searches">
   <ul class="list-group" id="putaso" style=" position: absolute;"></ul>
+  <br/>
+  <div id="displayloadmovil2" style="display: none;"><img style="position: relative; left: 50%;" height="50" width="50" src="{% static "img/fancybox_loading@2x.gif" %}"></div>
 </form>
 
 <div style="display: block; position: fixed; top: 130px; z-index: 1000; background: blue;" ></div>
@@ -474,18 +476,26 @@ $(document).ready(function(){
    $.each(data, function(key, value){
     if (value.titulo.search(expression) != -1 || value.director.search(expression) != -1 && resulta.value.length > 3 && widthscreen < 991)
     {
+      document.getElementById('displayloadmovil2').style.display="initial"
+      setTimeout(function(){
      $('#putaso').append('<li id="'+value.slug+'" class=" '+value.slug+' list-group-item link-class"><a style="color: black;" href="/peliculas/'+value.slug+'/"><img src="'+value.Cover+'" height="40" width="40" class="img-thumbnail" /> '+value.titulo+' | <span class="text-muted">'+value.director+'</span></a></li>');
+
+      document.getElementById('displayloadmovil2').style.display="none"
+   
      if (document.getElementsByClassName(''+value.slug+'').length > 1)
      {
       node = document.getElementById(''+value.slug+'')
         node.parentNode.removeChild(node)
      }
+     }, 800);
     }
 
     if (resulta.value.length == 0)
     {
       $('#putaso').empty();
       resultac.style.display = "none"
+      document.getElementById('displayloadmovil2').style.display="none"
+
     }
      window.onclick = function(event) {
           if (event.target != result) {
