--- a/templates/moviegridfw.html
+++ b/templates/moviegridfw.html
@@ -11,7 +11,7 @@
 
 {% block content %}
 {% if not seriesall %}
-<div class="hero common-hero" style="background: url('https://images.wallpaperscraft.com/image/that_awkward_moment_zac_efron_miles_teller_michael_jordan_92870_1920x1080.jpg') no-repeat;
+<div class="hero common-hero" style="background: url('https://s3-us-west-1.amazonaws.com/waomovies/static/img/fondocover.jpg') no-repeat;
   background-position: center 0px;
                       text-align: center;
                       background-size: cover;
