--- a/templates/moviesingle.html
+++ b/templates/moviesingle.html
@@ -1200,6 +1200,13 @@ $(this).remove();
     }
 }
 
+.editado{
+        background-color: gray;
+        padding: 2px 5px;
+        border-radius: 8px;
+        margin-left: 8px;
+        font-size: 13px; 
+    }
 </style>
 
 <!--Modal: modalYoutube-->
@@ -1640,6 +1647,10 @@ $(this).remove();
 
              </div>
               <a href="#" style="color: white; font-weight: bold; padding-left: 0px; "> <h3 style="display: inline;">{{ i.user.username }}</h3></a> 
+
+              {% if i.timestamp.time != i.updated.time or i.timestamp.date != i.updated.date %}
+                                    <span class="editado">editado</span>
+                                    {% endif %}
               {% if request.user.is_authenticated %}
               {% if request.user == i.user %}
 
@@ -1759,7 +1770,7 @@ $(this).remove();
   <div  class="collapse container" id="collapseExample{{i.id}}z">
   <form class="respv{{i.id}}" method="post" data-url="/responder/{{i.slug}}/">
   {% csrf_token %}<div class="md-form">
-   <img width="40"  height="40" style="border-radius: 50%; width: 50px; height: 50px;" src="{{request.user.profile.perfil_img.url}}">
+   <img style="border-radius: 50%; width: 50px; height: 50px;" src="{{request.user.profile.perfil_img.url}}">
     <input autocomplete="off" style="display: inline; width: 40%; position:relative; color: #abb7c4;" id="input-char-counter" placeholder="Añade una respuesta" type="text" length="400" class="form-control" name="respuesta" required><button style="display: inline; background: none; border: none" type="submit"  value="responder" name="" onclick="res(this)" id="v{{i.id}}"><i class="fa fa-send point" style="color: white; cursor: pointer;" ></i></button>
 </div>
   </form>
@@ -1792,6 +1803,9 @@ $(this).remove();
             <img style="border-radius: 50%; width: 50px; height: 50px;" src="{{cm.who.profile.perfil_img.url}}" alt="">
             <div style="position: relative; right: 20px;">
              <h3 style=" display: inline; font-size: 16px;">{{cm.who.username}}</h3>
+             {% if cm.timestamp.time != cm.updated.time or cm.timestamp.date != cm.updated.date %}
+                                    <span class="editado">editado</span>
+                                    {% endif %}
              {% if request.user == cm.who %}
              <i id="cog{{cm.id}}" style="cursor: pointer; color: grey; position: relative; top: -4x;" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="fa fa-cog dropdown-toggle px-3"></i>
 
