--- a/templates/moviesingle.html
+++ b/templates/moviesingle.html
@@ -1648,9 +1648,11 @@ $(this).remove();
              </div>
               <a href="#" style="color: white; font-weight: bold; padding-left: 0px; "> <h3 style="display: inline;">{{ i.user.username }}</h3></a> 
 
-              {% if not i.timestamp == i.updated %}
+              {% i.timestamp == i.updated %}
                                     <span class="editado">editado</span>
-                                    {% endif %}
+                                    {% else %}
+                                    none
+                    {% endif %}
               {% if request.user.is_authenticated %}
               {% if request.user == i.user %}
 
