--- a/templates/moviesingle.html
+++ b/templates/moviesingle.html
@@ -1648,10 +1648,10 @@ $(this).remove();
              </div>
               <a href="#" style="color: white; font-weight: bold; padding-left: 0px; "> <h3 style="display: inline;">{{ i.user.username }}</h3></a> 
 
-              {% i.timestamp == i.updated %}
+              {% if i.timestamp == i.updated %}
                                     <span class="editado">editado</span>
                                     {% else %}
-                                    none
+                                    
                     {% endif %}
               {% if request.user.is_authenticated %}
               {% if request.user == i.user %}
