--- a/templates/moviesingle.html
+++ b/templates/moviesingle.html
@@ -1648,7 +1648,7 @@ $(this).remove();
              </div>
               <a href="#" style="color: white; font-weight: bold; padding-left: 0px; "> <h3 style="display: inline;">{{ i.user.username }}</h3></a> 
 
-              {% if not i.timestamp == i.updated %}
+              {% if not i.timestamp.time == i.updated.time %}
                                     <span class="editado">{{ i.timestamp }}  {{ i.updated }}</span>
                                     {% else %}
                                     
